# DungeonMaster

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  dungeon-master-spec.md  pyproject.toml
.claude/: settings.json
.claude/agents/: bfrpg-data.md  db-migrations.md  frontend.md  llm-orchestrator.md  rules-engine.md  test-writer.md
alembic/: env.py
alembic/versions/: 61e51f450db9_initial_empty.py  749179faffc7_add_campaigns_image_negative_prompt.py  78fa9cf6ec1a_add_generated_images_session_id.py  a96d3a6e501d_phase_7_add_campaign_invites.py  b4e1bcdf4bff_add_status_effects_to_characters.py  c3f1a2e8d904_add_pronouns_description_to_characters.py  ca912dd07aa8_phase_1_schema.py  e7a3f1b9c205_make_characters_campaign_id_nullable.py
app/: config.py  deps.py  logging_config.py  main.py  metrics.py  middleware.py  ratelimit.py  security.py
app/api/: auth.py  campaigns.py  characters.py  chargen.py  images.py  portraits.py  sessions.py  sse.py  ws.py
app/db/: base.py  models.py  session.py
app/game/: __init__.py  chargen.py  classes.py  combat.py  death.py  dice.py  items.py  monsters.py  races.py  rules.py  validate_data.py
app/images/: client.py  health.py  portrait.py  queue.py  worker.py
app/llm/: client.py  embeddings.py  memory.py  modules.py  prompts.py  rules_text.py  tools.py
app/orchestrator/: context.py  dispatch.py  dm.py
app/realtime/: bridge.py  hub.py  messages.py  presence.py  pubsub.py
app/scripts/: load_module.py
app/templates/: base.html  campaign_dashboard.html  character_sheet.html  chargen.html  index.html  login.html  party_setup.html  register.html  table.html
app/views/: __init__.py  chargen.py  dashboard.py
data/bfrpg/: classes.yaml  equipment.yaml  monsters.yaml  races.yaml  spells.yaml
deploy/: PHASE_7_VERIFICATION.md  PHASE_8_BRIEF.md  PLAYTHROUGH_2026-05-03.md  RESTORE.md  bootstrap.sh  dungeon-master-imageworker.service  dungeon-master.service  nginx.conf
deploy/alerts/: notify.sh
deploy/cron/: dm-backup.sh  dm-images-rsync.sh  dungeon-master.cron
deploy/selinux/: README.md  dungeon-master.fc  dungeon-master.te  install.sh
deploy/systemd/: dm-watchdog-disk.service  dm-web.service  (+7 more)
tests/: conftest.py  test_auth.py  test_campaigns_api.py  test_dashboard.py  test_health.py  test_invite_revocation.py  test_logging_config.py  test_metrics.py  test_migrations.py  test_ratelimit.py  test_sessions_api.py  test_sse_bridge.py
(+76 files in other folders)
