[project]
name = "dungeon-master"
version = "0.1.0"
description = "LLM-driven Basic Fantasy RPG web app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Ben McConaghy" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23.0,<24",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.13,<2",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "jinja2>=3.1,<4",
    "redis>=5.2,<6",
    "httpx>=0.27,<0.29",
    "openai>=1.54,<2",
    "numpy>=2.1,<3",
    "bcrypt>=4.2,<5",
    "python-multipart>=0.0.18,<0.1",
    "itsdangerous>=2.2,<3",
    "uuid7>=0.1,<0.2",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2",
    "types-pyyaml>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "build/"]

[[tool.mypy.overrides]]
# uuid7 (PyPI distribution) installs as the `uuid_extensions` import package
# and ships no type stubs.
module = ["uuid_extensions.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-m", "not integration"]
markers = [
    "integration: hits the real vLLM endpoint; off by default (run via -m integration).",
]
